# Prism

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: Playground.prism  Sketch.prism  inheritance-sketch.prism  sema-sketch.txt  sema-sketch2.txt  traits-sketch.prism  traits-sketch2.prism
generator/: source_generator.py  source_generator.sh
include/Prism/Ast/: Ast.def  Ast.h  AstDump.h  AstFwd.h  Facet.def  Facet.h  Operators.h
include/Prism/Common/: Allocator.h  Assert.h  DebugGraphGen.h  Diagnostic.h  DiagnosticHandler.h  EnumUtil.h  Functional.h  IndentingStreambuf.h  Issue.h  IssueHandler.h  MacroUtils.h  MacroUtilsUndef.h  NoParent.h  PrettyName.h  Ranges.h  Rtti.h  TreeFormatter.h  Typename.h
include/Prism/Diagnostic/: Diagnostic.h  DiagnosticEmitter.h  DiagnosticFormat.h  DiagnosticHandler.h
include/Prism/Facet/: Facet.def  Facet.h
include/Prism/Invocation/: Invocation.h
include/Prism/Lexer/: Lexer.h  LexicalDiagnostic.h  LexicalIssue.h
include/Prism/ParseTree/: ParseTree.def  ParseTree.h
include/Prism/Parser/: Parser.h  SyntaxError.def  SyntaxError.h  SyntaxIssue.def  SyntaxIssue.h
include/Prism/Sema/: Analysis.h  AnalysisBase.h  Builtins.def  ConformanceAnalysis.h  Construction.h  Contracts.h  DependencyGraph.h  ExprAnalysis.h  FuncSig.h  FunctionAnalysis.h  GenericInstantiation.h  NameLookup.h  QualType.h  Scope.h  SemaContext.h  SemaDiagnostic.h  SemaFwd.h  SemaIssue.h  SemaPrint.h  Symbol.def  Symbol.h  SymbolFwd.h  TypeLayout.h
include/Prism/Source/: SourceContext.h  SourceLocation.h  Token.def  Token.h
src/Playground/: FuzzParser.cpp  Main.cpp  ParserPlayground.cpp  Playground.cpp  SemaPlayground.cpp
src/Prism/Ast/: Ast.cpp  AstDump.cpp  Facet.cpp  FacetClassDef.jinja  FacetFilters.py  FacetFwd.jinja  FacetMemberNames.jinja  Facets.yaml
src/Prism/Common/: Allocator.cpp  DebugGraphGen.cpp  Diagnostic.cpp  DiagnosticHandler.cpp  Filters.py  IndentingStreambuf.cpp  Issue.cpp  IssueHandler.cpp  PrettyName.cpp  SyntaxMacros.h  TreeFormatter.cpp  Typename.cpp
src/Prism/Diagnostic/: Diagnostic.cpp  DiagnosticEmitter.cpp  DiagnosticFormat.cpp  DiagnosticHandler.cpp
src/Prism/Facet/: Facet.cpp  FacetClassDef.jinja  FacetFilters.py  FacetMemberNames.jinja  Facets.yaml
src/Prism/Invocation/: Invocation.cpp
src/Prism/Lexer/: Lexer.cpp  LexicalDiagnostic.cpp  LexicalIssue.cpp
src/Prism/ParseTree/: ParseTree.cpp
src/Prism/Parser/: Grammar.txt  LinearParser.cpp  LinearParser.h  Parser.cpp  ParserBase.cpp  ParserBase.h  SyntaxError.cpp  SyntaxIssue.cpp
src/Prism/Sema/: Analysis.cpp  AnalysisBase.cpp  AnalysisBase.h  ConformanceAnalysis.cpp  Construction.cpp  Contracts.cpp  DependencyGraph.cpp  ExprAnalysis.cpp  FuncSig.cpp  FunctionAnalysis.cpp  GenericInstantiation.cpp  NameLookup.cpp  QualType.cpp  Scope.cpp  SemaContext.cpp  SemaDiagnostic.cpp  SemaDiagnostics.yaml  SemaDiagnosticsDecl.jinja  SemaDiagnosticsDef.jinja  SemaFilters.py  SemaFwd.cpp  SemaIssue.cpp  SemaIssueFilters.py  SemaIssues.yaml  SemaIssuesDecl.jinja  SemaIssuesDef.jinja  SemaPrint.cpp  Symbol.cpp  SymbolFwd.cpp  SymbolFwd.jinja  Symbols.yaml  TypeLayout.cpp
src/Prism/Source/: SourceContext.cpp  Token.cpp
sublime/: install.sh  prism.sublime-syntax
test/Prism/Common/: Allocator.t.cpp
test/Prism/Lexer/: Lexer.t.cpp
test/Prism/Parser/: Parser.t.cpp  ParserTestUtils.cpp  ParserTestUtils.h
test/Prism/Sema/: ConformanceAnalysis.t.cpp  GenericInstantiation.t.cpp  SemaDiagnostics.t.cpp  SemaIssues.t.cpp
test/Prism/TestUtils/: TestCompiler.cpp  TestCompiler.h
tool/: configure.sh  format-all.sh  generate-include-guards.sh
tool/_impl/: format.sh  include-guard-generator.pl
